Add new env variables to config

--- a/example.env
+++ b/example.env
@@ -1,6 +1,13 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=password
-DB_NAME=spendly_db
-DB_SSLMODE=disable
+DB_URL=postgres://user:pass@localhost:5432/db?sslmode=disable
+
+# Gateway
+API_PORT=:8080
+
+JWT_SECRET=mysecretkey
+JWT_EXPIRE=24h
+
+AUTH_SERVICE_ADDR=localhost:50051
+USER_SERVICE_ADDR=localhost:50052
+GROUP_SERVICE_ADDR=localhost:50053
+MEMBER_SERVICE_ADDR=localhost:50054
+EXPENSE_SERVICE_ADDR=localhost:50055
