--- a/example.env
+++ b/example.env
@@ -1,10 +1,10 @@
 DB_URL=postgres://user:pass@localhost:5432/db?sslmode=disable
 
-# Gateway
 API_PORT=:8080
 
 JWT_SECRET=mysecretkey
 JWT_EXPIRE=24h
+GRPC_TIMEOUT=2s
 
 AUTH_SERVICE_ADDR=localhost:50051
 USER_SERVICE_ADDR=localhost:50052
